Fix alignment issue on mobile bibliography page.

--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -1333,7 +1333,7 @@ ol#bibliography-list > li.date-divider:first-child h2 {
 		left: 18px;
 	}
 	ol#bibliography-list > li:before {
-		left: -22px;
+		left: -26px;
 	}
 	ol#bibliography-list > li cite {
 		font-size: 18px;
